--- a/frame/mytemplate.html
+++ b/frame/mytemplate.html
@@ -65,6 +65,7 @@ def trade(tradedate):
         cc.currentPeriod = cc.currentPeriod+1
         return
     cc.currentPeriod = 1
+    conn = cbt.getConnection()
     # 获取票池
     stocklist = getStockList(tradedate)
     if len(stocklist) == 0:
@@ -80,6 +81,10 @@ def trade(tradedate):
     t = TushareBasedata.TushareBasedata()
 {{ buylistStr }}
 
+
+    # 订单列表
+    orderlist = []
+
     '''
     调整仓位：卖出不在票池的股票
     '''
@@ -89,32 +94,23 @@ def trade(tradedate):
         if code in stocklist:
             stocklist.remove(code)
             continue
-        cst.order(tradedate, code, price, 0)
+        # cst.order(tradedate, code, price, 0)
+        o = StockOrder.StockOrder(cc.strategyId, code, tradedate, price, 0)
+        orderlist.append(o)
 
     '''
     调整仓位：买入符合条件的股票
     '''
-    orderlist = []
     # 买入
     for code in stocklist:
         o = StockOrder.StockOrder(cc.strategyId, code, tradedate, price, 100)
         orderlist.append(o)
-    cst.order(orderlist)
+    # 订单入库，并更新仓位
+    cst.order(orderlist, conn)
 
-
-    '''
-    风控条件
-    '''
-
-    # 增加仓位
-    # 计算买入的成交价格 （股票仓位中的价格*股票仓位中的数量+股票现价*股票现在购买的数量）/（股票仓位中的数量 + 股票现在购买的数量）
-    # 计算佣金、印花税等
-
-
-    # 计算卖出的成交价（股票价格*100）
-    # 如果有1000股，卖掉300股，价格从10元跌倒8元，（10*1000-8*300）/700；价格从10元涨到12元，（12*1000-10*1000）/（1000-300）
-    # 计算佣金、印花税等
-    # 买空后计算盈亏
+    if len(orderlist) == 0:
+        return 0
+    return 1
 
 
 ##################################  选股函数群 ##################################
@@ -161,8 +157,44 @@ def high_limit_filter(context, security_list):
 
 
 '''
+交易前
+'''
+def startTrade(d):
+    pass
+
+
+'''
+交易后
+1、初始化或记录当日资金账户信息
+2、如果没有订单，查询最新的仓位交易日, 如果仓位交易日为空，初始化资金账户,
+   如果仓位交易日不为空，查询仓位信息，复制仓位信息到新的交易日
+
+'''
+def endTrade(d, flag):
+    conn = cbt.getConnection()
+    # 查询最新的交易日
+    lastAccountDateStr = cst.getLastAccountDate(cc.strategyId, conn)
+    # 记录资金账户信息
+    money = cc.initMoney + cc.tradeMoney
+    cst.saveAccount(cc.strategyId, d, money, conn)
+    cc.tradeMoney=0
+    # 如果没有订单，查询最新的仓位交易日
+    if flag == 0:
+        # 如果仓位交易日不为空，查询仓位信息，复制仓位信息到新的交易日
+        if lastAccountDateStr != None:
+            lastPositionDf = cst.getPositionList(cc.strategyId, lastAccountDateStr, conn)
+            if len(lastPositionDf) > 0:
+                positionDf = lastPositionDf.copy()
+                # 更新仓位日期
+                positionDf['TRADEDATE'] = d
+                positionList = [tuple(x) for x in positionDf.values]
+                cst.savePosition(positionList, conn)
+
+'''
 日交易
 '''
 def handle_data(d):
     print d
-    trade(d)
+    startTrade(d)
+    i = trade(d)
+    endTrade(d, i)
